test: should compare buffers & should compare array buffers

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@2utils/is-equal",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "An ordinary isEqual func",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -8,13 +8,14 @@
     "lib/**/*"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "npm run pretty && npm run lint && tsc",
     "lint": "tslint -p tsconfig.json",
     "pretty": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "test": "jest --config jestconfig.json"
   },
   "devDependencies": {
     "@types/jest": "^25.1.2",
+    "@types/node": "^13.9.5",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "ts-jest": "^25.2.1",
